# binary-tagged

./: .gitignore  .travis.meta.yml  .travis.yml  CHANGELOG.md  README.md  bench.html  binary-tagged.cabal  cabal.haskell-ci  cabal.project  package.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-nightly.yaml
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
binary-tagged/: CHANGELOG.md  LICENSE  binary-tagged.cabal
binary-tagged/bench/: Bench.hs
binary-tagged/src/Data/Binary/: Tagged.hs
binary-tagged/test/: Generators.hs  Rec1.hs  Rec2.hs  Tests.hs
src/Data/Binary/: Tagged.hs  Tagged2.hs
structured/: CHANGELOG.md  LICENSE  structured.cabal
structured/src/Data/: Structured.hs
structured/src/Data/Structured/: Internal.hs  MD5.hs
test/: Rec1.hs  Rec2.hs  Tests.hs
